# DeepSeaRenderer

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  depth.cpp  depth.h  rendering.cpp  rendering.h
src/test/: CMakeLists.txt  testRenderer.cpp
test_dataset/: config.yaml
testset_bomb/: bomb_0001.exr  bomb_0002.exr  bomb_0003.exr  bomb_0004.exr  bomb_0005.exr  bomb_0006.exr  bomb_0007.exr  bomb_0008.exr  bomb_0009.exr  bomb_0010.exr  bomb_0011.exr  bomb_0012.exr  bomb_0013.exr  bomb_0014.exr  bomb_0015.exr  bomb_0016.exr  bomb_0017.exr  bomb_0018.exr  bomb_0019.exr  bomb_0020.exr  bomb_0021.exr  bomb_0022.exr  bomb_0023.exr  bomb_0024.exr  bomb_0025.exr  bomb_0026.exr  bomb_0027.exr  bomb_0028.exr  bomb_0029.exr  bomb_0030.exr  bomb_0031.exr  bomb_0032.exr  bomb_0033.exr  bomb_0034.exr  bomb_0035.exr  bomb_0036.exr  bomb_0037.exr  bomb_0038.exr  bomb_0039.exr  bomb_0040.exr  (+3 more)
testset_middlebury/Adirondack_perfect/: config.yaml  depth_lists.txt  img_lists.txt
